--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Yannick Simard <ysimard@gmail.com>",
   "directories": {"config": "./config"},
   "dependencies": {
+    "js-yaml" : "0.3.x",
 	"config": "0.4.20",
 	"express": "3.1.0"
   }
